@@ -5,27 +5,46 @@ import com.advanceio.technicalassessment.pokergame.entity.CardRank;
 import com.advanceio.technicalassessment.pokergame.services.util.gamerules.HandRank;
 import com.advanceio.technicalassessment.pokergame.services.util.gamerules.PokerVariant;
 
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class StraightRankChecker implements RankChecker {
     @Override
     public String evaluateHand(List<Card> hand, PokerVariant pokerVariant) {
-        // Implement logic for checking Straight
-        if (hand.size() != pokerVariant.getHandSize()) {
+        if (hand == null || pokerVariant == null || hand.size() != pokerVariant.getHandSize()) {
             return HandRank.UNKNOWN_HAND.toString();
         }
 
-        // Extract distinct ranks and sort them
+        if (hand.stream().anyMatch(card -> card == null || card.getValue() == null)) {
+            return HandRank.UNKNOWN_HAND.toString();
+        }
+
         List<CardRank> sortedRanks = hand.stream()
                 .map(Card::getValue)
                 .distinct()
-                .sorted()
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparingInt(CardRank::getValue))
+                .toList();
 
-        // Check if the ranks form a consecutive sequence
-        if (sortedRanks.size() == 5
-                && (sortedRanks.get(4).ordinal() - sortedRanks.get(0).ordinal() == 4)) {
+        if (sortedRanks.size() != pokerVariant.getHandSize()) {
+            return HandRank.UNKNOWN_HAND.toString();
+        }
+
+        boolean isStandardStraight = true;
+        for (int i = 0; i < sortedRanks.size() - 1; i++) {
+            if (sortedRanks.get(i + 1).getValue() - sortedRanks.get(i).getValue() != 1) {
+                isStandardStraight = false;
+                break;
+            }
+        }
+
+        boolean isWheelStraight = sortedRanks.size() == 5
+                && sortedRanks.get(0) == CardRank.TWO
+                && sortedRanks.get(1) == CardRank.THREE
+                && sortedRanks.get(2) == CardRank.FOUR
+                && sortedRanks.get(3) == CardRank.FIVE
+                && sortedRanks.get(4) == CardRank.ACE;
+
+        if (isStandardStraight || isWheelStraight) {
             return HandRank.STRAIGHT.name();
         }
 
